<resources>
    <string name="app_name">Schedule</string>
    <string name="time_for_your_activity">Time for your activity</string>
    <string name="upload">Upload</string>
    <string name="enter_a_time">Enter a time:</string>
    <string name="input_a_date">Input a date</string>
    <string name="date_to_schedule">Date to schedule:</string>
    <string name="click_to_set_a_date">Click to set a date</string>
    <string name="activity_start_time">Activity start time:</string>
    <string name="click_to_set_activity_start_time">Click to set activity start time</string>
    <string name="activity_end_time">Activity end time:</string>
    <string name="click_to_set_activity_end_time">Click to set activity end time</string>
    <string name="activity_description">Activity description:</string>
    <string name="activity_description_hint">Insert an activity description:</string>
    <string name="textview">TextView</string>
    <string name="date">DATE:</string>
    <string name="confirm">Confirm</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="calendar">Calendar</string>
    <string name="delete_the_activity">Delete The Activity</string>

</resources>